@@ -14,6 +14,9 @@ jsoup changelog
     dependency for nullability assertions).
     <https://github.com/jhy/jsoup/issues/1616>
 
+  * Build Improvement: fixed nullability annotations for Node.equals(other) and other equals methods.
+    <https://github.com/jhy/jsoup/issues/1628>
+
 *** Release 1.14.2 [2021-Aug-15]
   * Improvement: support Pattern.quote \Q and \E escapes in the selector regex matchers.
     <https://github.com/jhy/jsoup/pull/1536>
